--- a/src/try.ipynb
+++ b/src/try.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-12T10:25:20.525488Z",
-     "start_time": "2025-07-12T10:25:17.584911300Z"
+     "end_time": "2025-07-26T14:39:54.253379Z",
+     "start_time": "2025-07-26T14:39:39.970083700Z"
     }
    },
    "source": [
@@ -23,18 +23,18 @@
      "output_type": "stream",
      "text": [
       "Enter the value: \r\n",
-      "Well the number isn't one or two it is 45.0\r\n"
+      "Well the number isn't one or two it is 3.0\r\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-12T10:26:58.690526200Z",
-     "start_time": "2025-07-12T10:26:48.425823500Z"
+     "end_time": "2025-07-26T14:39:57.701284300Z",
+     "start_time": "2025-07-26T14:39:54.279262800Z"
     }
    },
    "source": "print(readln())",
@@ -43,18 +43,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Huha"
+      "6"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-12T12:47:30.395594800Z",
-     "start_time": "2025-07-12T12:47:30.083043100Z"
+     "end_time": "2025-07-26T14:39:57.942585700Z",
+     "start_time": "2025-07-26T14:39:57.759599100Z"
     }
    },
    "source": [
@@ -76,13 +76,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T06:23:01.042052400Z",
-     "start_time": "2025-07-13T06:23:00.298984600Z"
+     "end_time": "2025-07-26T14:39:58.091500100Z",
+     "start_time": "2025-07-26T14:39:57.964674400Z"
     }
    },
    "cell_type": "code",
@@ -100,13 +100,13 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T09:26:07.868608900Z",
-     "start_time": "2025-07-13T09:26:07.781935400Z"
+     "end_time": "2025-07-26T14:39:58.400109300Z",
+     "start_time": "2025-07-26T14:39:58.111429600Z"
     }
    },
    "cell_type": "code",
@@ -120,7 +120,62 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T14:39:58.563423500Z",
+     "start_time": "2025-07-26T14:39:58.436628Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class Constructors {\n",
+    "    init {\n",
+    "        println(\"Init block\")\n",
+    "    }\n",
+    "\n",
+    "    constructor(i: Int) {\n",
+    "        println(\"Constructor $i\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Constructors(12)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init block\r\n",
+      "Constructor 12\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Line_8_jupyter$Constructors@3c257a24"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T14:39:58.692616600Z",
+     "start_time": "2025-07-26T14:39:58.684554400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
