--- a/src/try.ipynb
+++ b/src/try.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-26T14:39:54.253379Z",
      "start_time": "2025-07-26T14:39:39.970083700Z"
     }
    },
-   "source": [
-    "println(\"Enter the value: \")\n",
-    "val x = readln().toDouble()\n",
-    "when(x) {\n",
-    "    1.0 -> println(\"x==1\")\n",
-    "    2.0 -> println(\"x==2\")\n",
-    "    else -> println(\"Well the number isn't one or two it is $x\")\n",
-    "}"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -27,17 +19,25 @@
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "println(\"Enter the value: \")\n",
+    "val x = readln().toDouble()\n",
+    "when(x) {\n",
+    "    1.0 -> println(\"x==1\")\n",
+    "    2.0 -> println(\"x==2\")\n",
+    "    else -> println(\"Well the number isn't one or two it is $x\")\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-26T14:39:57.701284300Z",
      "start_time": "2025-07-26T14:39:54.279262800Z"
     }
    },
-   "source": "print(readln())",
    "outputs": [
     {
      "name": "stdout",
@@ -47,26 +47,19 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "print(readln())"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-26T14:39:57.942585700Z",
      "start_time": "2025-07-26T14:39:57.759599100Z"
     }
    },
-   "source": [
-    "\n",
-    "fun test(a: Any) {\n",
-    "    var y = a\n",
-    "    if (y is String) {\n",
-    "        println(y.length)\n",
-    "    }\n",
-    "}\n",
-    "test(\"hello\")\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -76,21 +69,26 @@
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "\n",
+    "fun test(a: Any) {\n",
+    "    var y = a\n",
+    "    if (y is String) {\n",
+    "        println(y.length)\n",
+    "    }\n",
+    "}\n",
+    "test(\"hello\")\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-26T14:39:58.091500100Z",
      "start_time": "2025-07-26T14:39:57.964674400Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "var boolFalse: Boolean // not initialized\n",
-    "boolFalse = false      // initialized\n",
-    "println(boolFalse)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -100,17 +98,21 @@
      ]
     }
    ],
-   "execution_count": 5
+   "source": [
+    "var boolFalse: Boolean // not initialized\n",
+    "boolFalse = false      // initialized\n",
+    "println(boolFalse)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-26T14:39:58.400109300Z",
      "start_time": "2025-07-26T14:39:58.111429600Z"
     }
    },
-   "cell_type": "code",
-   "source": "for (i in 1..3) print(i)\n",
    "outputs": [
     {
      "name": "stdout",
@@ -120,29 +122,19 @@
      ]
     }
    ],
-   "execution_count": 6
+   "source": [
+    "for (i in 1..3) print(i)\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-26T14:39:58.563423500Z",
      "start_time": "2025-07-26T14:39:58.436628Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "class Constructors {\n",
-    "    init {\n",
-    "        println(\"Init block\")\n",
-    "    }\n",
-    "\n",
-    "    constructor(i: Int) {\n",
-    "        println(\"Constructor $i\")\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "Constructors(12)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -163,19 +155,49 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "source": [
+    "class Constructors {\n",
+    "    init {\n",
+    "        println(\"Init block\")\n",
+    "    }\n",
+    "\n",
+    "    constructor(i: Int) {\n",
+    "        println(\"Constructor $i\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Constructors(12)"
+   ]
   },
   {
+   "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T14:39:58.692616600Z",
-     "start_time": "2025-07-26T14:39:58.684554400Z"
+     "end_time": "2025-07-30T10:27:29.445571500Z",
+     "start_time": "2025-07-30T10:27:29.380898Z"
     }
    },
+   "source": [
+    "var a: Float = 4.0f / 3\n",
+    "println(a)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3333334\r\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
@@ -191,7 +213,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.9.23"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
